--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.6.4",
+    "@devexpress/dx-react-chart-material-ui": "^2.6.4",
+    "@devexpress/dx-react-core": "^2.6.4",
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,7 +17,7 @@
     "react-dom": "^16.12.0",
     "react-roughviz": "^0.1.8",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-uuid": "^1.0.2"
   },
   "scripts": {
